# architools

./: pyproject.toml
fisica_tecnica/: fondamenti.md  teoria.ipynb
