[tool.poetry]
name = "architools"
version = "0.1.0"
description = "collection of tools for architectural design"
authors = ["sharpilo <irakli.sharpilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.9.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
